# bioformats

./: .appveyor.yml  .classpath  .classpath-template  .gitattributes  .gitignore  .mailmap  .project  .travis.settings.xml  .travis.yml  AVIReader.java  AVIWriter.java  AdobeDeflateCompressor.java  AggregateMetadataStore.java  AndorReader.java  AxisGuesser.java  BMPReader.java  Base64Encoder.java  BaseCompressor.java  BaseTiffReader.java  BioFormatsSuffixes.txt  BioRadReader.java  BitBuffer.java  BitWriter.java  ByteVector.java  CMakeLists.txt  CONTRIBUTING.md  CRC.java  ChannelMerger.java  ChannelSeparator.java  ComboFileFilter.java  Compression.java  Compressor.java  DataTools.java  DeltavisionReader.java  DicomReader.java  Dockerfile  DummyMetadataStore.java  EPSReader.java  EPSWriter.java  ExtensionFileFilter.java  (+122 more)
components/bio-formats-jace/: CMakeLists.txt  build.properties  build.xml  readme.txt
components/bio-formats-jace/include/: bioformats.h
components/bio-formats-jace/jace/: CMakeLists.txt  bsd.txt  readme.txt
components/bio-formats-jace/source/: array_example.cpp  showinf.cpp
components/native/bf-cpp/: CMakeLists.txt  build.properties  build.xml  cmake_extras.txt  core.txt  gen.sh  readme-linux.txt  readme-macosx.txt  readme-windows.txt  readme.txt  winGen.bat
components/native/bf-itk-jace/: CMakeLists.txt  LICENSE.txt  build.properties  build.xml  itkBioFormatsIOPlugin.cxx  itkBioFormatsIOPlugin.h  itkBioFormatsIOWin32Header.h  itkBioFormatsImageIO.cxx  itkBioFormatsImageIO.h  itkBioFormatsImageIOConfigure.h.in  itkBioFormatsImageIOFactory.cxx  itkBioFormatsImageIOFactory.h  pom.xml  readme.txt
components/native/bf-itk-jni/: CMakeLists.txt  LICENSE.txt  build.properties  itkBioFormatsIOPlugin.cxx  itkBioFormatsIOPlugin.h  itkBioFormatsIOWin32Header.h  itkBioFormatsImageIOConfigure.h.in  itkBioFormatsImageIOFactory.cxx  itkBioFormatsImageIOFactory.h  itkBioFormatsJNIImageIO.cxx  itkBioFormatsJNIImageIO.h  pom.xml  readme.txt
components/native/bf-itk-pipe/: CMakeLists.txt  LICENSE.txt  build.properties  build.xml  itkBioFormatsIOPlugin.cxx  itkBioFormatsIOPlugin.h  itkBioFormatsIOWin32Header.h  itkBioFormatsImageIO.cxx  itkBioFormatsImageIO.h  itkBioFormatsImageIOConfigure.h.in  itkBioFormatsImageIOFactory.cxx  itkBioFormatsImageIOFactory.h  itkBioFormatsImageIOTest.cxx  itkBioFormatsImageInfo.cxx  itkRGBBioFormatsImageIOTest.cxx  itkVectorImageBioFormatsImageIOTest.cxx  perf.cxx  pom.xml  readme.txt
components/native/itk-plugin/: CMakeLists.txt  build.properties  build.sh  build.xml  itkBioFormatsIOPlugin.cxx  itkBioFormatsIOPlugin.h  itkBioFormatsIOWin32Header.h  itkBioFormatsImageIO.cxx  itkBioFormatsImageIO.h  itkBioFormatsImageIOConfigure.h.in  itkBioFormatsImageIOFactory.cxx  itkBioFormatsImageIOFactory.h  readme.txt
cpp/: .gitignore  CMakeLists.txt  LICENSE.md  Makefile  NOTES  README  build.xml  config.h.in
cpp/cmake/: BioFormatsCommon.cmake  BioFormatsSuperBuild.cmake  BoostChecks.cmake  CompilerChecks.cmake  Doxygen.cmake  DoxygenCheck.cmake  ExternalProjectEnvironment.cmake  ExternalProjectHelpers.cmake  ExternalProject_cmake_build.cmake  ExternalProject_cmake_configure.cmake  ExternalProject_cmake_install.cmake  ExternalProject_cmake_test.cmake  External_bioformats.cmake  External_boost.cmake  External_boost_build.cmake  External_boost_configure.cmake  External_bzip2.cmake  External_bzip2_build.cmake  External_bzip2_patch.cmake  External_icu.cmake  External_icu_build.cmake  External_icu_configure.cmake  External_icu_install.cmake  External_png.cmake  External_tiff.cmake  External_xerces.cmake  External_xerces_build.cmake  External_xerces_common.cmake  External_xerces_configure.cmake  External_xerces_install.cmake  External_zlib.cmake  FindBoost.cmake  FindGTest.cmake  FindLibDl.cmake  FindTIFF.cmake  FindXalanC.cmake  FindXerces.cmake  FindXercesC.cmake  GTest.cmake  HeaderTest.cmake  (+20 more)
cpp/cmake/External_bzip2_files/: CMakeLists.txt  RunTest.cmake  bz2.def
cpp/cmake/External_tiff_files/: CMakeLists.txt  configure.ac
cpp/doc/: CMakeLists.txt  bioformats.dox.cmake
cpp/examples/: CMakeLists.txt
cpp/lib/: CMakeLists.txt  config.h.in
cpp/libexec/: CMakeLists.txt
cpp/libexec/glview/: CMakeLists.txt  Window.cpp  Window.h  glview.cpp
cpp/libexec/info/: CMakeLists.txt  ImageInfo.cpp  ImageInfo.h  info.cpp  options.cpp  options.h
cpp/libexec/showinf/: CMakeLists.txt  ImageInfo.h  options.cpp  options.h  showinf.cpp
cpp/libexec/view/: CMakeLists.txt  Window.cpp  Window.h  view.cpp
cpp/share/icons/: CMakeLists.txt
cpp/test/: CMakeLists.txt  color.cpp  constrained-numeric.h  enum.cpp  genheaders  main.cpp  non-negative-float.cpp  percent-fraction.cpp  positive-float.cpp  positive-integer.cpp  timestamp.cpp  xerces.cpp
cpp/test/ome-bioformats/: CMakeLists.txt  catalog.cpp  dimension.cpp  fileinfo.cpp  formatreader.cpp  formattools.cpp  formatwriter.cpp  metadatamap.cpp  metadatatools.cpp  minimaltiffreader.cpp  minimaltiffwriter.cpp  ometiffwriter.cpp  pixel.cpp  pixel.h  pixelbuffer-bit.cpp  pixelbuffer-complex.cpp  pixelbuffer-double.cpp  pixelbuffer-doublecomplex.cpp  pixelbuffer-float.cpp  pixelbuffer-int16.cpp  pixelbuffer-int32.cpp  pixelbuffer-int8.cpp  pixelbuffer-order.cpp  pixelbuffer-uint16.cpp  pixelbuffer-uint32.cpp  pixelbuffer-uint8.cpp  pixelbuffer.cpp  pixelbuffer.h  pixelproperties.cpp  planeregion.cpp  tiff-coverage.cpp  tiff-tilecache.cpp  tiff.cpp  tiffreader.cpp  tiffsamples.cpp  tiffsamples.h  tilebuffer.cpp  tilecache.cpp  tilecoverage.cpp  variantpixelbuffer.cpp  (+2 more)
cpp/test/ome-common/: CMakeLists.txt  boolean.cpp  endian.cpp  filesystem.cpp  (+16 more)
docs/doxygen/: CMakeLists.txt  bioformats.dox.cmake  ome-xml.dox.cmake
docs/sphinx/: .gitignore  CMakeLists.txt  Makefile  about.txt  assembly.xml  build.xml  commit-testing.txt  conf.py  conf.py.in  dataset-structure-table.txt  dataset-table.txt  export.txt  index.rst  index.txt  make.bat  matlab.txt  metadata-summary.rst  metadata-summary.txt  pom.xml  preamble.tex  service.txt  supported-formats.rst  supported-formats.txt  testing-notes.txt  troubleshooting.txt
(+11710 files in other folders)
